src/app/globals.scss
/* ... */
// BG Grain EFFECT CSS ##########

@keyframes animateGrain {
  0%,
  100% {
    transform: translate(0, 0);
  }
  10% {
    transform: translate(-5%, -10%);
  }
  20% {
    transform: translate(-15%, -20%);
  }
  30% {
    transform: translate(-5%, -10%);
  }
  40% {
    transform: translate(-15%, -20%);
  }

  50% {
    transform: translate(-5%, -10%);
  }
  60% {
    transform: translate(-15%, -20%);
  }
  70% {
    transform: translate(-5%, -10%);
  }
  80% {
    transform: translate(-15%, -20%);
  }
  90% {
    transform: translate(-5%, -10%);
  }
  100% {
    transform: translate(-15%, -20%);
  }
}

// Glitch Effect
/* Glitch with Noise */
.glitch-noise {
  position: relative;
  font-size: 80px;
  line-height: 1.2;
  color: #fff;
  letter-spacing: 5px;
  z-index: 1;
}

.glitch-noise:before {
  content: attr(data-glitch);
  position: absolute;
  top: 0;
  left: -2px;
  width: 100%;
  color: white;
  background-color: transparent;
  overflow: hidden;
  clip: rect(0, 900px, 0, 0);

  @media (prefers-reduced-motion: no-preference) {
    animation: noise-before 3s infinite linear alternate-reverse;
  }
}

.glitch-noise:after {
  content: attr(data-glitch);
  position: absolute;
  top: 0;
  left: 2px;
  width: 100%;
  color: white;
  background-color: transparent;
  overflow: hidden;
  clip: rect(0, 900px, 0, 0);

  @media (prefers-reduced-motion: no-preference) {
    animation: noise-after 2s infinite linear alternate-reverse;
  }
  mix-blend-mode: exclusion;
}

@keyframes noise-before {
  0% {
    clip: rect(61px, 9999px, 52px, 0);
  }

  5% {
    clip: rect(33px, 9999px, 144px, 0);
  }

  10% {
    clip: rect(121px, 9999px, 115px, 0);
  }

  15% {
    clip: rect(144px, 9999px, 162px, 0);
  }

  20% {
    clip: rect(62px, 9999px, 180px, 0);
  }

  25% {
    clip: rect(34px, 9999px, 42px, 0);
  }

  30% {
    clip: rect(147px, 9999px, 179px, 0);
  }

  35% {
    clip: rect(99px, 9999px, 63px, 0);
  }

  40% {
    clip: rect(188px, 9999px, 122px, 0);
  }

  45% {
    clip: rect(154px, 9999px, 14px, 0);
  }

  50% {
    clip: rect(63px, 9999px, 37px, 0);
  }

  55% {
    clip: rect(161px, 9999px, 147px, 0);
  }

  60% {
    clip: rect(109px, 9999px, 175px, 0);
  }

  65% {
    clip: rect(157px, 9999px, 88px, 0);
  }

  70% {
    clip: rect(173px, 9999px, 131px, 0);
  }

  75% {
    clip: rect(62px, 9999px, 70px, 0);
  }

  80% {
    clip: rect(24px, 9999px, 153px, 0);
  }

  85% {
    clip: rect(138px, 9999px, 40px, 0);
  }

  90% {
    clip: rect(79px, 9999px, 136px, 0);
  }

  95% {
    clip: rect(25px, 9999px, 34px, 0);
  }

  100% {
    clip: rect(173px, 9999px, 166px, 0);
  }
}

@keyframes noise-after {
  0% {
    clip: rect(26px, 9999px, 33px, 0);
  }

  5% {
    clip: rect(140px, 9999px, 198px, 0);
  }

  10% {
    clip: rect(184px, 9999px, 89px, 0);
  }

  15% {
    clip: rect(121px, 9999px, 6px, 0);
  }

  20% {
    clip: rect(181px, 9999px, 99px, 0);
  }

  25% {
    clip: rect(154px, 9999px, 133px, 0);
  }

  30% {
    clip: rect(134px, 9999px, 169px, 0);
  }

  35% {
    clip: rect(26px, 9999px, 187px, 0);
  }

  40% {
    clip: rect(147px, 9999px, 137px, 0);
  }

  45% {
    clip: rect(31px, 9999px, 52px, 0);
  }

  50% {
    clip: rect(191px, 9999px, 109px, 0);
  }

  55% {
    clip: rect(74px, 9999px, 54px, 0);
  }

  60% {
    clip: rect(145px, 9999px, 75px, 0);
  }

  65% {
    clip: rect(153px, 9999px, 198px, 0);
  }

  70% {
    clip: rect(99px, 9999px, 136px, 0);
  }

  75% {
    clip: rect(118px, 9999px, 192px, 0);
  }

  80% {
    clip: rect(1px, 9999px, 83px, 0);
  }

  85% {
    clip: rect(145px, 9999px, 98px, 0);
  }

  90% {
    clip: rect(121px, 9999px, 154px, 0);
  }

  95% {
    clip: rect(156px, 9999px, 44px, 0);
  }

  100% {
    clip: rect(67px, 9999px, 122px, 0);
  }
}

/* Glitch with Transformation */

.glitch-trans {
  position: relative;
  font-size: 80px;
  font-weight: 700;
  line-height: 1.2;
  color: #fff;
  letter-spacing: 5px;
  animation: shift 4s ease-in-out infinite alternate;
  transform: skewX(0deg);
  z-index: 1;
}

@keyframes shift {
  0%,
  40%,
  44%,
  58%,
  61%,
  65%,
  69%,
  73%,
  100% {
    transform: skewX(0deg);
  }

  41% {
    transform: skewX(10deg);
  }

  42% {
    transform: skewX(-10deg);
  }

  59% {
    transform: skewX(40deg) skewY(10deg);
  }

  60% {
    transform: skewX(-40deg) skewY(-10deg);
  }

  63% {
    transform: skewX(10deg) skewY(-5deg);
  }

  70% {
    transform: skewX(-50deg) skewY(-20deg);
  }

  71% {
    transform: skewX(10deg) skewY(-10deg);
  }
}

// Glitch Effect ends

.ap_container {
  @apply max-w-[1324px] mx-auto;
  &_medium {
    @apply max-w-[1240px] mx-auto;
  }

  &_small {
    @apply max-w-[1170px] mx-auto;
  }
}

.h1-size {
  font-size: clamp(42px, 5vw, 68px);
  font-weight: 400;
  line-height: 1;
  @apply mb-12 max-md:mb-8;
}

.h2-size {
  font-size: clamp(38px, 5vw, 50px);
  font-weight: 300;
  line-height: 1.2;
  @apply mb-6 max-md:mb-4;
  > span {
    //color: var(--secondary-color);
    font-weight: 600;
  }
}

.paragraph {
  font-size: clamp(20px, 5vw, 26px);
  font-weight: 300;
  line-height: 1.5;
  color: #e1e1e1;
}

.wysWygEditor {
  p {
    color: #e1e1e1;
    margin-bottom: max(40px, min(5vw, 50px));
    font-size: max(20px, min(5vw, 26px));
    font-weight: 300;
    line-height: 1.5;

    &:last-child {
      margin-bottom: 0;
    }
  }

  ul {
    list-style: disc;
    margin-left: 22px;
    margin-bottom: max(40px, min(5vw, 50px));

    li {
      margin-bottom: 20px;
      font-size: max(20px, min(5vw, 26px));
      font-weight: 300;

      &:last-child {
        margin-bottom: 0;
      }
    }
  }
}

.apBannerContent {
  h1 {
    @extend .h1-size;
  }

  p {
    font-size: max(24px, min(5vw, 32px));
  }

  @media all and (max-width: 1023px) {
    margin-left: auto;
    margin-right: auto;
    flex: 1;
    p {
      max-width: 100%;
    }
  }
}
/* ... */

